test/type/pass/local_call.j
class A{
  Void main() {
    return;
  }
}

class B {
  Void foo() {
    foo(this);
    return;
  }
  Void foo(B b) {
    return;
  }
}
