test/type/fail/nonexistent_type_class_field.j
class A { Void main() { return; } }
class B {
  C c;
}
